--- a/Eredar/Eredar/Views/Shared/_Layout.cshtml
+++ b/Eredar/Eredar/Views/Shared/_Layout.cshtml
@@ -6,6 +6,11 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    @Scripts.Render("~/Scripts/jquery-1.10.2.min.js") 
+    @*ukljucivanje jquery ui prikljucka!*@ 
+    @Scripts.Render("~/Scripts/jquery-ui-1.12.1.min.js")
+
+
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -37,6 +42,8 @@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    @*ukljucivanje jquery ui prikljucka!*@ 
+    @Scripts.Render("~/bundles/jqueryui")
     @RenderSection("scripts", required: false)
 </body>
 </html>
