<configSections> stavljen kao root element u Web.config. PublicController postavljen kao defaultni.

--- a/Eredar/Eredar/Views/SysAdmin/SysAdminNavigation.cshtml
+++ b/Eredar/Eredar/Views/SysAdmin/SysAdminNavigation.cshtml
@@ -55,9 +55,9 @@
             </a>
             <ul class="collapse" id="component-rod">
                 <li class=""><a href="#"><i class="icon-angle-right"></i> Pregled korisnika </a></li>
-                <li class=""><a href="#"><i class="icon-angle-right"></i> Radni administratora</a></li>
+                <li class=""><a href="#"><i class="icon-angle-right"></i> Pregled administratora gradova</a></li>
                 <!--<li class=""><a href="#"><i class="icon-angle-right"></i> Razgovor s roditeljem </a></li>
-                <li class=""><a href="#"><i class="icon-angle-right"></i> Bilješke o radu</a></li>-->
+    <li class=""><a href="#"><i class="icon-angle-right"></i> Bilješke o radu</a></li>-->
             </ul>
         </li>
 
