--- a/Eredar/Eredar/Views/SysAdmin/SysAdminNavigation.cshtml
+++ b/Eredar/Eredar/Views/SysAdmin/SysAdminNavigation.cshtml
@@ -35,6 +35,7 @@
                     <i class="icon-angle-left"></i>
                 </span>
             </a>
+            <div id="test1"></div>
             <ul class="collapse" id="component-nav">
                 <li class=""><a href="#"><i class="icon-angle-right"></i> Pregled svih prijava </a></li>
                 <li class=""><a href="#"><i class="icon-angle-right"></i> Pregled novih prijava </a></li>
